--- a/src/app.scss
+++ b/src/app.scss
@@ -5,7 +5,11 @@
 :root {
   font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  --primary-color: #d9d9d9;
+  --primary-color: #ffdf80;
+  --title-fontsize: 50px;
+  --text-color: #ff8000;
+  --border-color: #ff6600;
+  --border-width: 10px;
 }
 
 * {
